Fix backend-frontend connection and cleanup project structure